--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -26,40 +26,119 @@ body {
     font-size: 60px;
     letter-spacing: 3px;
     text-decoration: line-through;
+    margin-bottom: 65px;
 }
 
 .filterBar {
-    width: 250px;
+    width: 308px;
     margin-left: auto;
     margin-right: auto;
-    height: 20px;
-    padding: 5px;
-    border-radius: 20px;
-    margin-bottom: 50px;
+    height:10px;
+    margin-bottom: 40px;
+    border-top: 1px solid white;
+}
+
+.ACTIVELinkContainer, 
+.ALLLinkContainer, 
+.ALL_2LinkContainer, 
+.COMPLETEDLinkContainer{
+    display: inline-block;
+    height:40px;
+    width: 40px;
+    padding:0;
+    position: relative;
+    bottom:29px;
+    text-align: center;
+}
+
+.ACTIVELinkContainer {
+    right: 110px;
+}
+
+.ACTIVE {
+    background-color: black;
+}
+
+.ALL_2LinkContainer {
+    width: 20px;
+}
+
+.ALL {
+    width: 20px;
+    position: relative;
+    
+}
+
+
+.ALL_2 {
+    width: 20px;
+    background-color: black;
+    position: relative;
+    right:13px;
+}
+
+
+.COMPLETEDLinkContainer {
+    left:110px;
+}
+
+
+
+
+.ALLLinkContainer:hover .ALLText {
+    visibility: visible;
+}
+.ALLText {
+position: relative;
+left:10px;
+}
+.ALL_2Text {
+    position: relative;
+    right:22px;
+}
+
+.ALL_2LinkContainer:hover .ALL_2Text {
+    visibility: visible;
+}
+
+.COMPLETEDLinkContainer:hover .COMPLETEDText {
+    visibility: visible;
+}
+
+.ACTIVELinkContainer:hover .ACTIVEText {
+    visibility: visible;
+}
+
+
+.COMPLETEDText, .ALLText, .ACTIVEText, .ALL_2Text {
+    color:white;
+    position: relative;
+    bottom: 15px;
+    visibility: hidden;
 }
 
 .filterButton {
-    border:none;
-    padding: 5px;
-    margin-right: 15px;
-    background-color: Transparent;
-    color: rgb(210, 210, 210);
-    font-size: 16px;
-    outline: none;
-
-
-}
-.filterButtonActive {
-    outline: none;
-    border:none;
-    padding: 5px;
-    margin-right: 15px;
-    background-color: Transparent;
-    color: white;
-    font-size: 22px;
+    height:20px;
+    width: 20px;
+    padding:0;
+    border: 1px solid white;
+    border-radius: 50%;
+    transform: scale(1);
     transition: all, 0.5s;
-
+    outline:none;
 }
+
+
+.filterButtonActive{
+    height:20px;
+    width: 20px;
+    border: 1px solid white;
+    border-radius: 50%;
+    transition: all, 0.5s;
+    transform: scale(1.4);  
+    outline:none;
+}
+
 
 
 
@@ -75,40 +154,76 @@ li {
     transition: all, 0.5s;
     color:white;
     opacity: 1;
-    margin-top: 5px;
 
 }
 
 .todoList {
+    margin-left: auto;
+    margin-right: auto;
     position: relative;
     list-style: none;
+    height: 345px;
+    width: 400px;
+    color :white;
+    position: relative;
     overflow: scroll;
-    height: 325px;
 }
 
-.todo {
-
-    padding: 10px;
-    max-width: 240px;
-    max-height: 50px;
-    font-size: 25px;
-    background-color: rgba(246, 246, 246,0);
-    color:white;
-    outline: none;
-    border: 1px white solid;
-    border-right: none;
-    resize: none;
-    margin-right: 50px;
-
-}
-
-.boxBottom {
-    border: white 1px solid;
+.checkMark {
     height: 30px;
-    width: 358px;
-    transform: perspective(200px) rotateY(20deg) rotateX(20deg);
+    float: left;
+}
+.todo { 
+    width: 340px;
+    height: 60px;
+    border: 1px solid white;
+    background-color: black;
+    color:white;
+    outline:none;
+    line-height: 60px;
+    z-index: 3;
+}
+
+.gradient {
+    background: linear-gradient(black,rgba(255,255,255,0));
+    width: 100%;
+    height: 3%;
+    position: fixed;
 
 }
+
+
+
+
+.todoText{
+    background-color: transparent;
+    color:#B4B4B4;
+    padding: 5px 10px 5px 10px;
+    font-size: 20px;
+    border: none;
+    float: left;
+    width: 200px;
+    resize: none;
+    outline: none;
+    height: 50px;
+    line-height: 25px;
+}
+
+.connectorRight {
+    position: relative;
+    right:16px;
+    width: 200px;
+    height: 20px;
+}
+
+.connectorLeft {
+    position: relative;
+    right:15px;
+    width: 200px;
+    height: 20px;
+    border-left: 1px solid white;
+}
+
 
 .deleteButton {
     position: absolute;
@@ -119,44 +234,30 @@ li {
     width: 30px;
     height: 30px;
     margin-right: 5px;
-
+    display: none;
 }
 
-.checkBox{
-    text-align-last: right;
-    display: block;
-    direction: rtl;
-    background-color: rgba(255, 255,255 ,.2); 
-    height: 72px;
-    border:none;
-    outline: none;
-    border: 1px white solid;
-    border-left:none;
-    width: 72px;
-    position: absolute;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    transition: all, 0.5s;
-    margin-right: 9px;
-
+.checkCircle{
+    margin-left: 55px;
+    height:31px;
+    width: 31px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 2px solid white;
+    display: table-cell;
+    vertical-align: middle;
 }
 
-.checkBoxCompleted{
-    text-align-last: right;
-    display: block;
-    direction: rtl;
-    background-color: rgba(255, 255,255 ,.2); 
-    height: 72px;
-    border:none;
-    outline: none;
-    border: 1px white solid;
-    border-left:none;
-    width: 325px;
-    position: absolute;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    transition: all, 0.5s;
+.checkCircleCompleted{
 
+    margin-left: 55px;
+    height:31px;
+    width: 31px;
+    border-radius: 50%;
+    background-color: white;
+    border: 2px solid white;
+    display: table-cell;
+    vertical-align: middle;
 }
 
 li > * {
@@ -168,25 +269,27 @@ form {
 }
 
 .todoInput {
-    width: 280px;
+    color: #B4B4B4;
+    outline: none;
+    width: 250px;
     border: none;
     padding:20px;
     font-size: 25px;
-    background-color:white;
     margin-left: auto;
     margin-right:auto;
-    border-radius: 20px;
     margin-top: 20px;
+    background-color: transparent;
+    border-bottom: 1px solid white;
 }
 
 .todoSubmit {
     display: block;
-    border:none;
-    background-color: rgba(246, 246, 246,0.6);
+    border: 2px solid white;
+    background-color: black;
     font-size: 30px;
     height: 30px;
     width: 30px;
-    border-radius: 6px;
+    border-radius: 50px;
     margin-left: 10px;
     margin-top: 15px;
     margin-left: auto;
