--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -19,7 +19,7 @@ body {
 .app {
     text-align: center;
 }
-
+/* Header */
 .title{
     font-family: 'ZCOOL QingKe HuangYou';
     color:white;
@@ -29,6 +29,8 @@ body {
     margin-bottom: 65px;
 }
 
+
+/* Filter Bar */
 .filterBar {
     width: 308px;
     margin-left: auto;
@@ -38,10 +40,10 @@ body {
     border-top: 1px solid white;
 }
 
-.ACTIVELinkContainer, 
-.ALLLinkContainer, 
-.ALL_2LinkContainer, 
-.COMPLETEDLinkContainer{
+.ACTIVE_LinkContainer, 
+.ALL_LinkContainer, 
+.ALL_2_LinkContainer, 
+.COMPLETED_LinkContainer{
     display: inline-block;
     height:40px;
     width: 40px;
@@ -51,24 +53,34 @@ body {
     text-align: center;
 }
 
-.ACTIVELinkContainer {
+.ACTIVE_LinkContainer {
     right: 110px;
+}
+
+.ALL_2_LinkContainer {
+    width: 20px;
+}
+
+.COMPLETED_LinkContainer {
+    left:110px;
+}
+
+.ALL_LinkContainer:hover .ALLText,
+.ALL_2_LinkContainer:hover .ALL_2Text,
+.COMPLETED_LinkContainer:hover .COMPLETEDText,
+.ACTIVE_LinkContainer:hover .ACTIVEText
+{   
+    visibility: visible;
 }
 
 .ACTIVE {
     background-color: black;
 }
 
-.ALL_2LinkContainer {
-    width: 20px;
-}
-
 .ALL {
     width: 20px;
     position: relative;
-    
 }
-
 
 .ALL_2 {
     width: 20px;
@@ -77,38 +89,15 @@ body {
     right:13px;
 }
 
-
-.COMPLETEDLinkContainer {
-    left:110px;
-}
-
-
-
-
-.ALLLinkContainer:hover .ALLText {
-    visibility: visible;
-}
 .ALLText {
-position: relative;
-left:10px;
+    position: relative;
+    left:10px;
 }
+
 .ALL_2Text {
     position: relative;
     right:22px;
 }
-
-.ALL_2LinkContainer:hover .ALL_2Text {
-    visibility: visible;
-}
-
-.COMPLETEDLinkContainer:hover .COMPLETEDText {
-    visibility: visible;
-}
-
-.ACTIVELinkContainer:hover .ACTIVEText {
-    visibility: visible;
-}
-
 
 .COMPLETEDText, .ALLText, .ACTIVEText, .ALL_2Text {
     color:white;
@@ -169,10 +158,12 @@ li {
     overflow: scroll;
 }
 
-.checkMark {
-    height: 30px;
-    float: left;
+.messageSpan {
+    font-size: 20px;
+    position: relative;
+    top:40px;
 }
+
 .todo { 
     width: 340px;
     height: 60px;
