--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -2,6 +2,20 @@
     font-family: 'Inconsolata', monospace;
 }
 
+.todoList::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+.todoList::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+ 
+.todoList::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
 html {
     background-color: black;
     position: fixed;
@@ -188,7 +202,7 @@ li {
     width: 300px;
     color :white;
     position: relative;
-    overflow: scroll;
+    overflow-y: scroll;
     text-align: center;
 }
 
@@ -378,6 +392,9 @@ form {
 }
 
 @media (min-width: 768px) {
+
+
+
     .title {
         font-size: 80px;
     }
@@ -395,14 +412,6 @@ form {
     .checkCircleCompleted:hover {
     transform: scale(1.2);
     transition: all, 0.5s;
-    }
-
-    .gradient {
-    background: linear-gradient(black,rgba(255,255,255,0));
-    width: 90%;
-    height: 3%;
-    position: fixed;
-    display: block;
     }
 
     .deleteButton:hover {
