--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -16,6 +16,10 @@
     -webkit-box-shadow: inset 0 0 6px rgba(255,255,255,0.0); 
 }
 
+body {
+    scrollbar-width: none
+ }
+
 
 html {
     background-color: black;
@@ -214,6 +218,7 @@ li {
     color :white;
     position: relative;
     overflow-y: scroll;
+    scrollbar-width: none;
 }
 
 
